--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2020. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Mon, 06 Apr 2020 23:35:31 +0100
+ Exported at: Tue, 07 Apr 2020 10:46:28 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -23,7 +27,7 @@
     <string name="copied_to_clipboard">In Zwischenablage kopiert</string>
     <string name="new_image">Neues Bild wählen</string>
     <string name="rate_app">App bewerten</string>
-    <string name="rate_m">Bewerten Sie Color Converter auf Google Play mit 5 Sternen, wenn Ihnen die App gefällt!</string>
+    <string name="rate_m">Wenn Ihnen unsere App gefällt, bewerten Sie sie auf Google Play mit 5 Sternen!</string>
     <string name="share_app">App weiterempfehlen</string>
     <string name="share">Weiterempfehlen</string>
     <string name="share_m">Emfehlen Sie Color Converter an Ihre Freunde!</string>
