--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2020. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Mon, 06 Apr 2020 23:35:31 +0100
+ Exported at: Tue, 07 Apr 2020 10:46:29 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">cerrar</string>
@@ -23,7 +27,7 @@
     <string name="copied_to_clipboard">Copiado al portapapeles</string>
     <string name="new_image">Elige nueva imagen</string>
     <string name="rate_app">Evaluar la applicatión</string>
-    <string name="rate_m">¡Califique el convertidor de color en Google Play con 5 estrellas, si está disfrutando de la aplicación!</string>
+    <string name="rate_m">¡Si estás disfrutando de nuestra aplicación, por favor pasa un minuto y valora Color Converter con 5 estrellas en Google Play!</string>
     <string name="share_app">Recommendar la applicatión</string>
     <string name="share">Recommendar</string>
     <string name="share_m">Recomienda Color Converter a tus amigos!</string>
