--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Sun, 17 May 2020 11:28:57 +0100
+ Exported at: Sun, 17 May 2020 14:26:29 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -35,7 +35,7 @@
     <string name="press_color_to_apply">Auf Farbe tippen zum Bestätigen</string>
     <string name="rate">Bewerten</string>
     <string name="color_name">Name</string>
-    <string name="rgb_code">RGB-Code</string>
+    <string name="argb_code">ARGB-Code</string>
     <string name="hsv_code">HSV-Code</string>
     <!-- %s is a placeholder -->
     <string name="name_">Name: %s</string>
