--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Sun, 17 May 2020 11:28:57 +0100
+ Exported at: Sun, 17 May 2020 14:26:29 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">cerrar</string>
@@ -35,7 +35,7 @@
     <string name="press_color_to_apply">Toque el color para aplicar</string>
     <string name="rate">Evaluar</string>
     <string name="color_name">Nombre</string>
-    <string name="rgb_code">Código RGB</string>
+    <string name="argb_code">Código ARGB</string>
     <string name="hsv_code">Código HSV</string>
     <!-- %s is a placeholder -->
     <string name="name_">Nombre: %s</string>
