--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Sun, 24 May 2020 19:35:31 +0100
+ Exported at: Sun, 24 May 2020 20:37:52 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">cerrar</string>
@@ -63,4 +63,5 @@
     <string name="audio_muted">Por favor aumente el volumen</string>
     <string name="transparency_warning_t">Advertencia de transparencia</string>
     <string name="transparency_warning_m">Seleccionó un color transparente o casi transparente. Esto tiene el efecto de que los cambios de color ya no son visibles. Para recuperar el control sobre el color, por favor mueve el deslizador de transparencia a la derecha.</string>
+    <string name="remember_selection">Recuerde la selección</string>
 </resources>
