--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Fri, 26 Jun 2020 15:46:01 +0100
+ Exported at: Sat, 27 Jun 2020 19:09:58 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -64,4 +64,5 @@
     <string name="transparency_warning_t">Transparenz-Warnung</string>
     <string name="transparency_warning_m">Sie haben eine transparente oder fast transparente Farbe gewählt. Dies hat den Effekt, dass Farbwechsel nicht mehr sichtbar sind. Um die Kontrolle über die Farbe wiederzuerlangen, bewegen Sie den Transparenz-Regler nach rechts.</string>
     <string name="remember_selection">Auswahl speichern</string>
+    <string name="cmyk_code">CMYK-Code</string>
 </resources>
