--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: ru, Russian
  Exported by: ChilliBits
- Exported at: Fri, 26 Jun 2020 15:46:02 +0100
+ Exported at: Sat, 27 Jun 2020 19:09:58 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">закрыть</string>
@@ -35,8 +35,8 @@
     <string name="press_color_to_apply">Коснитесь цвета, чтобы применить</string>
     <string name="rate">Оценить</string>
     <string name="color_name">Название</string>
-    <string name="argb_code">ARGB код</string>
-    <string name="hsv_code">HSV код</string>
+    <string name="argb_code">ARGB-код</string>
+    <string name="hsv_code">HSV-код</string>
     <!-- %s is a placeholder -->
     <string name="name_">Название: %s</string>
     <!-- ColorSelectionActivity -->
@@ -64,4 +64,5 @@
     <string name="transparency_warning_t">Предупреждение о прозрачности</string>
     <string name="transparency_warning_m">Вы выбрали полностью прозрачный или близкий к таковому цвет.\u0020\u0020Это приводит к тому, что изменения цвета больше не видны.\u0020\u0020Чтобы восстановить контроль над цветом, пожалуйста, переместите ползунок прозрачности вправо.</string>
     <string name="remember_selection">Запомнить выбор</string>
+    <string name="cmyk_code">CMYK-код</string>
 </resources>
