--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Sat, 27 Jun 2020 19:09:58 +0100
+ Exported at: Sat, 27 Jun 2020 21:00:25 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -65,4 +65,6 @@
     <string name="transparency_warning_m">Sie haben eine transparente oder fast transparente Farbe gewählt. Dies hat den Effekt, dass Farbwechsel nicht mehr sichtbar sind. Um die Kontrolle über die Farbe wiederzuerlangen, bewegen Sie den Transparenz-Regler nach rechts.</string>
     <string name="remember_selection">Auswahl speichern</string>
     <string name="cmyk_code">CMYK-Code</string>
+    <string name="disable_alpha">Transparenz deaktivieren</string>
+    <string name="rgb_code">RGB-Code</string>
 </resources>
