--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Sat, 27 Jun 2020 19:09:58 +0100
+ Exported at: Sat, 27 Jun 2020 21:00:25 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">fermer</string>
@@ -65,4 +65,6 @@
     <string name="transparency_warning_m">Vous avez choisi une couleur transparente ou presque transparente. Cela a pour effet que les changements de couleur ne sont plus visibles. Pour reprendre le contrôle de la couleur, veuillez déplacer le curseur de transparence vers la droite.</string>
     <string name="remember_selection">Se souvenir de la sélection</string>
     <string name="cmyk_code">Code CMYK</string>
+    <string name="disable_alpha">Désactiver la transparence</string>
+    <string name="rgb_code">Code RGB</string>
 </resources>
