--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Tue, 30 Jun 2020 17:58:41 +0100
+ Exported at: Tue, 30 Jun 2020 18:50:23 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -67,4 +67,5 @@
     <string name="cmyk_code">CMYK-Code</string>
     <string name="disable_alpha">Transparenz deaktivieren</string>
     <string name="rgb_code">RGB-Code</string>
+    <string name="error">Ein Fehler ist aufgetreten</string>
 </resources>
