--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: ru, Russian
  Exported by: ChilliBits
- Exported at: Tue, 30 Jun 2020 17:58:41 +0100
+ Exported at: Tue, 30 Jun 2020 18:50:23 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">закрыть</string>
@@ -67,4 +67,5 @@
     <string name="cmyk_code">CMYK-код</string>
     <string name="disable_alpha">Отключить прозрачность</string>
     <string name="rgb_code">RGB-код</string>
+    <string name="error">Произошла ошибка</string>
 </resources>
