--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Tue, 30 Jun 2020 17:58:40 +0100
+ Exported at: Tue, 30 Jun 2020 18:50:23 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">close</string>
@@ -67,4 +67,5 @@
     <string name="cmyk_code">CMYK code</string>
     <string name="disable_alpha">Disable alpha</string>
     <string name="rgb_code">RGB code</string>
+    <string name="error">An error occurred</string>
 </resources>
