--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,10 +9,9 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Thu, 30 Jul 2020 14:47:30 +0100
+ Exported at: Fri, 31 Jul 2020 21:23:19 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="close">schließen</string>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
     <!-- MainActivity -->
@@ -56,7 +55,7 @@
     <string name="instant_install_m">Diese Funktion wird nicht in der Instant-Version der App unterstützt. Bitte installieren Sie die App, um diese Funktion zu nutzen.</string>
     <string name="install_app_download">Installieren Sie diese App um alle Funktionen zu genießen, auch Funktionen, die wir in der Instant-Version der App nicht unterstützen.</string>
     <string name="approve_permissions">Diese Berechtigungen werden benötigt, damit dieses Feature funktioniert.</string>
-    <string name="message_to_drag_up">Für Galerie Bilder hochwischen</string>
+    <string name="pix_bottom_message_without_video">Für Galerie Bilder hochwischen</string>
     <string name="speak_color">Farbe sprechen</string>
     <string name="language_not_available">Sprache nicht verfügbar</string>
     <string name="initialization_failed">Initialisierung fehlgeschlagen</string>
