--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Mon, 19 Oct 2020 21:43:52 +0100
+ Exported at: Sun, 25 Oct 2020 10:49:32 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -67,4 +67,6 @@
     <string name="disable_alpha">Disable alpha</string>
     <string name="rgb_code">RGB code</string>
     <string name="error">An error occurred</string>
+    <string name="saved_colors">Saved colors</string>
+    <string name="color_palette">Color palette</string>
 </resources>
