--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Sun, 25 Oct 2020 12:12:40 +0000
+ Exported at: Wed, 28 Oct 2020 03:05:20 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -67,6 +67,6 @@
     <string name="disable_alpha">Désactiver la transparence</string>
     <string name="rgb_code">Code RGB</string>
     <string name="error">Une erreur s\'est produite</string>
-    <string name="saved_colors"></string>
-    <string name="color_palette"></string>
+    <string name="saved_colors">Couleurs enregistrées</string>
+    <string name="color_palette">Palette de couleurs</string>
 </resources>
