--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Wed, 28 Oct 2020 03:05:20 +0000
+ Exported at: Thu, 05 Nov 2020 08:40:13 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -69,4 +69,6 @@
     <string name="error">Ein Fehler ist aufgetreten</string>
     <string name="saved_colors">Gespeicherte Farben</string>
     <string name="color_palette">Farb-Palette</string>
+    <string name="import_color_palette">Farbpalette importieren</string>
+    <string name="export_color_palette">Farbpalette exportieren</string>
 </resources>
