--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Wed, 28 Oct 2020 03:05:20 +0000
+ Exported at: Thu, 05 Nov 2020 08:40:14 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">Aceptar</string>
@@ -69,4 +69,6 @@
     <string name="error">Se ha producido un error</string>
     <string name="saved_colors">Colores guardados</string>
     <string name="color_palette">Paleta de color</string>
+    <string name="import_color_palette"></string>
+    <string name="export_color_palette"></string>
 </resources>
