--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Wed, 28 Oct 2020 03:05:20 +0000
+ Exported at: Thu, 05 Nov 2020 08:40:13 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -69,4 +69,6 @@
     <string name="error">Une erreur s\'est produite</string>
     <string name="saved_colors">Couleurs enregistrées</string>
     <string name="color_palette">Palette de couleurs</string>
+    <string name="import_color_palette"></string>
+    <string name="export_color_palette"></string>
 </resources>
