--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: ru, Russian
  Exported by: ChilliBits
- Exported at: Thu, 05 Nov 2020 08:40:14 +0000
+ Exported at: Wed, 25 Nov 2020 13:21:05 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">ОК</string>
@@ -71,4 +71,5 @@
     <string name="color_palette"></string>
     <string name="import_color_palette"></string>
     <string name="export_color_palette"></string>
+    <string name="color_already_saved"></string>
 </resources>
