--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Thu, 05 Nov 2020 08:40:13 +0000
+ Exported at: Wed, 25 Nov 2020 13:21:05 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -71,4 +71,5 @@
     <string name="color_palette">Color palette</string>
     <string name="import_color_palette">Import color palette</string>
     <string name="export_color_palette">Export color palette</string>
+    <string name="color_already_saved">This color was saved already</string>
 </resources>
