--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Wed, 25 Nov 2020 13:21:05 +0000
+ Exported at: Wed, 25 Nov 2020 21:50:04 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">Aceptar</string>
@@ -69,7 +69,7 @@
     <string name="error">Se ha producido un error</string>
     <string name="saved_colors">Colores guardados</string>
     <string name="color_palette">Paleta de color</string>
-    <string name="import_color_palette"></string>
-    <string name="export_color_palette"></string>
-    <string name="color_already_saved"></string>
+    <string name="import_color_palette">Importar la paleta de colores</string>
+    <string name="export_color_palette">Exportar la paleta de colores</string>
+    <string name="color_already_saved">Este color ya fue guardado</string>
 </resources>
