--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: ru, Russian
  Exported by: ChilliBits
- Exported at: Wed, 25 Nov 2020 13:21:05 +0000
+ Exported at: Wed, 25 Nov 2020 21:50:04 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">ОК</string>
@@ -67,9 +67,9 @@
     <string name="disable_alpha">Отключить прозрачность</string>
     <string name="rgb_code">RGB-код</string>
     <string name="error">Произошла ошибка</string>
-    <string name="saved_colors"></string>
-    <string name="color_palette"></string>
-    <string name="import_color_palette"></string>
-    <string name="export_color_palette"></string>
-    <string name="color_already_saved"></string>
+    <string name="saved_colors">Сохраненные цвета</string>
+    <string name="color_palette">Цветовая палитра</string>
+    <string name="import_color_palette">Импортная цветовая палитра</string>
+    <string name="export_color_palette">Экспортная цветовая палитра</string>
+    <string name="color_already_saved">Этот цвет уже был сохранен</string>
 </resources>
