Implement ASE export

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Sun, 27 Dec 2020 10:15:05 +0000
+ Exported at: Wed, 30 Dec 2020 03:11:13 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -72,4 +72,5 @@
     <string name="import_color_palette">Importer une palette de couleurs</string>
     <string name="export_color_palette">Exporter la palette de couleurs</string>
     <string name="color_already_saved">Cette couleur a déjà été sauvegardée</string>
+    <string name="import_export_palette"></string>
 </resources>
