--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Sun, 27 Dec 2020 10:15:05 +0000
+ Exported at: Wed, 30 Dec 2020 08:49:39 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -72,4 +72,5 @@
     <string name="import_color_palette">Farbpalette importieren</string>
     <string name="export_color_palette">Farbpalette exportieren</string>
     <string name="color_already_saved">Diese Farbe ist bereits gespeichert</string>
+    <string name="import_export_palette">Palette importieren / exportieren</string>
 </resources>
