--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Sun, 27 Dec 2020 10:15:04 +0000
+ Exported at: Wed, 30 Dec 2020 03:11:13 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -72,4 +72,5 @@
     <string name="import_color_palette">Import color palette</string>
     <string name="export_color_palette">Export color palette</string>
     <string name="color_already_saved">This color was saved already</string>
+    <string name="import_export_palette">Import / Export palette</string>
 </resources>
