--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Wed, 30 Dec 2020 03:11:13 +0000
+ Exported at: Wed, 30 Dec 2020 11:12:09 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -73,4 +73,9 @@
     <string name="export_color_palette">Export color palette</string>
     <string name="color_already_saved">This color was saved already</string>
     <string name="import_export_palette">Import / Export palette</string>
+    <string name="export_to_aco">Export to ACO file</string>
+    <string name="export_to_ase">Export to ASE file</string>
+    <string name="import_from_aco">Import from ACO file</string>
+    <string name="import_from_ase">Import from ASE file</string>
+    <string name="export">Export</string>
 </resources>
