--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: ru, Russian
  Exported by: ChilliBits
- Exported at: Fri, 01 Jan 2021 14:52:30 +0000
+ Exported at: Sat, 02 Jan 2021 15:24:12 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">ОК</string>
@@ -72,10 +72,10 @@
     <string name="import_color_palette">Импортная цветовая палитра</string>
     <string name="export_color_palette">Экспортная цветовая палитра</string>
     <string name="color_already_saved">Этот цвет уже был сохранен</string>
-    <string name="import_export_palette"></string>
-    <string name="export_to_aco"></string>
-    <string name="export_to_ase"></string>
-    <string name="import_from_aco"></string>
-    <string name="import_from_ase"></string>
-    <string name="export"></string>
+    <string name="import_export_palette">Импорт / экспорт палитры</string>
+    <string name="export_to_aco">Экспорт в ACO-файл</string>
+    <string name="export_to_ase">Экспорт в ASE-файл</string>
+    <string name="import_from_aco">Импорт из файла ACO</string>
+    <string name="import_from_ase">Импорт из файла ASE</string>
+    <string name="export">Экспорт</string>
 </resources>
