--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Fri, 12 Feb 2021 21:48:31 +0000
+ Exported at: Fri, 12 Feb 2021 22:44:21 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -78,4 +78,11 @@
     <string name="import_from_aco">Import from ACO file</string>
     <string name="import_from_ase">Import from ASE file</string>
     <string name="export">Export</string>
+    <string name="colorconverter_on_github">Color Converter on GitHub</string>
+    <string name="tap_to_visit_us_on_github">Tap to visit us on GitHub</string>
+    <string name="app_version">App version</string>
+    <string name="the_developers">The developers</string>
+    <string name="more_apps_from_us">More apps from us</string>
+    <string name="open_source_licenses">OpenSource licenses</string>
+    <string name="tap_here_to_view_all_used_libraries">Tap here to view all used libraries</string>
 </resources>
