--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Thu, 18 Feb 2021 20:39:27 +0000
+ Exported at: Fri, 19 Feb 2021 17:47:07 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -64,7 +64,7 @@
     <string name="transparency_warning_m">You selected a transparent or almost transparent color. This has the effect, that color changes are not visible any more. To regain control over the color, please move the transparency slider to the right.</string>
     <string name="remember_selection">Remember selection</string>
     <string name="cmyk_code">CMYK code</string>
-    <string name="disable_alpha">Disable alpha</string>
+    <string name="enable_alpha">Enable alpha</string>
     <string name="rgb_code">RGB code</string>
     <string name="error">An error occurred</string>
     <string name="saved_colors">Saved colors</string>
@@ -86,6 +86,8 @@
     <string name="open_source_licenses">OpenSource licenses</string>
     <string name="tap_here_to_view_all_used_libraries">Tap here to view all used libraries</string>
     <string name="general">General</string>
-    <string name="about">About</string>
+    <string name="about">About Color Converter</string>
     <string name="our_playstore_page">Our PlayStore page</string>
+    <string name="enabled">Enabled</string>
+    <string name="disabled">Disabled</string>
 </resources>
