--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Fri, 30 Jul 2021 16:50:13 +0100
+ Exported at: Sat, 31 Jul 2021 13:44:20 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -20,7 +20,6 @@
     <string name="choose_color">Choisir une couleur</string>
     <string name="save_color">Sauver couleur</string>
     <string name="save">Sauver</string>
-    <string name="choose_name">Choisir nom</string>
     <string name="pick_random_color">Générer couleur au hasard</string>
     <string name="pick_color_from_image">Choisir la couleur de l\'image</string>
     <string name="copied_to_clipboard">Copié dans la presse-papiers</string>
@@ -33,7 +32,7 @@
     <string name="recommend_string">Color Converter: Convertir les couleurs, déterminer des couleurs des images et bien plus encore! Un outil efficace pour les programmeurs et les concepteurs. Télécharger de Google Play: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
     <string name="press_color_to_apply">Appuyez sur la couleur pour appliquer</string>
     <string name="rate">Évaluer</string>
-    <string name="color_name">Prénom</string>
+    <string name="name">Prénom</string>
     <string name="argb_code">Code ARGB</string>
     <string name="hsv_code">Code HSV</string>
     <!-- %s is a placeholder -->
